--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Webcomponent logo-card following open-wc recommendations",
   "license": "MIT",
   "author": "logo-card",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "analyze": "cem analyze --litelement",
@@ -17,5 +17,17 @@
     "@custom-elements-manifest/analyzer": "^0.4.17",
     "@web/dev-server": "^0.1.34"
   },
-  "customElements": "custom-elements.json"
+  "customElements": "custom-elements.json",
+  "main": "web-dev-server.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ZachGTheG/logo-card.git"
+  },
+  "keywords": [
+    "logo-card"
+  ],
+  "bugs": {
+    "url": "https://github.com/ZachGTheG/logo-card/issues"
+  },
+  "homepage": "https://github.com/ZachGTheG/logo-card#readme"
 }
