--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 .DS_Store
 
 ## npm
+/node_modules/
 /npm-debug.log
 
 ## testing
@@ -22,3 +23,4 @@
 storybook-static
 custom-elements.json
 
+node_modules
